--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="form-group">
                     <label for="date">Date:</label>
-                    <input type="date" id="date" name="date" required>
+                    <input type="date" id="dateInput" name="dateInput" required>
                     <br>
                     <div class="form-group">
                         <label for="ticketCount">Ticket Count:</label>
@@ -55,7 +55,8 @@
                         <input type="number" id="ticketCount" name="ticketCount" min="1" placeholder="Ticket Count" required>
                     </div>
                 </div>
-                <button type="submit">Search Flights</button>
+                <button type="submit" onclick="checkDateValidity()">Search Flights</button>
+                <p id="result"></p>
             </form>
         
     
