--- a/home.html
+++ b/home.html
@@ -131,7 +131,7 @@
   <!-- Popup -->
   <div class="popup" id="popup">
       <span class="close" onclick="closePopup()">&times;</span>
-      <h2>Details</h2>
+      <h2 style="text-align: center;">DETAILS</h2>
       <br>
       <p>Departure: <span id="departureText"></span></p>
       <br>
@@ -140,6 +140,8 @@
       <p>Date: <span id="dateText"></span></p>
       <br>
       <p>Ticket Count: <span id="ticketCountText"></span></p>
+      <br>
+      <button type="submit" id="confirm_button">CONFIRM</button>
   </div>
 </body>
     </html>
