--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <p id="result"></p>
-                <button onclick="checkDateValidity()">Search Flights</button>
+                <button class="check" onclick="checkDateValidity()">Search Flights</button>
                 
             </div>
         
@@ -69,7 +69,7 @@
 
     <div class="image-container">
     <div class="image-description">
-        <img src="logo_consitent.png" class= logo  width="200" height="200" alt="Image 1">
+        <img src="https://w7.pngwing.com/pngs/389/866/png-transparent-black-background-airplane-icon.png" class= logo  width="200" height="200" alt="Image 1">
         <p>
            Consistent Service that you can relay upon
         </p>
