--- a/home.html
+++ b/home.html
@@ -19,16 +19,17 @@
             <li><a href="#">Book Ticket</a></li>
             <li><a href="#">Airport</a></li>
             <li><a href="#">Get Offers</a></li>
-            <li><a href="#">Your Orders</a></li>
+            <li><a href="#">Your Booking</a></li>
             <li><a href="#">Manage</a></li>
         </ul>
     </nav>
     <div class="carousel-container">
         <h2 class="topheading"> Flight Booking</h2>
+        <h2 class="topheading2"> Door to fly</h2>
         <div class="carousel">
             <div class="carousel-item"><img src="flight_evening.jpg" alt=" Image1" width=100% height=100% ></div>
             <div class="carousel-item"><img src="https://wallpapercave.com/wp/wp2025608.jpg" alt=" Image2" width=100% height=100% ></div>
-            <div class="carousel-item"><img src="https://c4.wallpaperflare.com/wallpaper/565/844/14/plane-sky-flying-sunset-wallpaper-preview.jpg" alt=" Image1" width=100% height=850px ></div>
+            <div class="carousel-item"><img src="https://c4.wallpaperflare.com/wallpaper/565/844/14/plane-sky-flying-sunset-wallpaper-preview.jpg" alt=" Image1" width=100% height=100% ></div>
             
         </div>
         <button class="prev-button">&#8592;</button>
