--- a/home.html
+++ b/home.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <title>Flight booking Ahead</title>
 </head>
 <body>
@@ -25,11 +27,12 @@
     </nav>
     <div class="carousel-container">
         <h2 class="topheading"> Flight Booking</h2>
-        <h2 class="topheading2"> Door to fly</h2>
+       
+<h2 class="topheading2"> Door to fly <i class="fas fa-plane"></i></h2>
         <div class="carousel">
-            <div class="carousel-item"><img src="flight_evening.jpg" alt=" Image1" width=100% height=100% ></div>
-            <div class="carousel-item"><img src="https://wallpapercave.com/wp/wp2025608.jpg" alt=" Image2" width=100% height=100% ></div>
-            <div class="carousel-item"><img src="https://c4.wallpaperflare.com/wallpaper/565/844/14/plane-sky-flying-sunset-wallpaper-preview.jpg" alt=" Image1" width=100% height=100% ></div>
+            <div class="carousel-item"><img src="flight_evening_reduced.jpg" alt=" Image1" width=100% height=100% ></div>
+            <div class="carousel-item"><img src="imageedit_3_3323501916.jpg" alt=" Image2" width=100% height=100% ></div>
+            <div class="carousel-item"><img src="background-3_reduced.jpg" alt=" Image1" width=100% height=100% ></div>
             
         </div>
         <button class="prev-button">&#8592;</button>
